- The name of the public record locking semaphore has to be preallocated
  for OS4 if the AllocSysObject() function is used to create it.

- Moved the signal block mask and the signal function table out of
  signal_data.c and into signal_raise.c where they are actually used.
  This makes it possible to override the default definition of the
  __check_abort_enabled variable in your own programs.


c.lib 1.190 (25.3.2005)

- DoTimer() now calls AllocSysObject() rather than making up
  a MsgPort locally.

- The record locking semaphore code now builds a semaphore to add
  before it tries to find the public one in memory. That way, the
  code can spend less time in Forbid() state and, heaven forbid,
  refrain from allocating memory while in that state.

- Split the general stdio initialization/cleanup code from the
  initialization of the stdin/stdout/stderr streams.

- Moved the Workbench console stream initialization into the
  initialization code for the stdin/stdout/stderr streams and
  out of the program parameter setup.

- The current program name is now set up in the stdlib
  initialization function.

- Simplified the machine test code; moved the FPU check into
  the math initialization code.

- Added more safety checks to verify that file descriptor
  file handles are valid.

- Made the file descriptor checks in the fsync() and fdatasync()
  functions more robust.

- Cleaned up the 68k build makefile, so that the CPU and FPU
  tests and the error message display can run safely even
  on plain 68000 machines. This won't work for the 32 bit small
  data model, which implies 68020 code, but so there...

- Moved the CPU/FPU type tests into the respective linker
  libraries.

- Moved the data declarations out of math_data.c, stat_data.c,
  socket_data.c, dirent_data.c and stdio_data.c and into the
  code that initializes them.

- Moved a few __delete_semaphore() calls into conditional compilation
  sections where they should have been in the first place.
